--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,108 +1,13 @@
-<!DOCTYPE html>
-<html>
-
-
-<head>
-
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-
-<link href='https://fonts.googleapis.com/css?family=Stalemate&subset=latin,latin-ext' rel='stylesheet' type='text/css'>	
-<link rel="stylesheet" type="text/css" href="style-main.css">
-
-</head>
-
-<body>
-  <!--this is the facebook script-->
-  <script>window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '1015943141834553',
-      xfbml      : true,
-      version    : 'v2.6'
-    });
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-  </script>
-
-
-
-
 <div class="sitewrapper" id="sitewrapper">
-<div class="headerBackground" id="headerBackground">
-  <div class="header" id="header">
     
-      <ul class="companyName">
-        <li id="leoName"><a href="#">Leonardo Antonio PhotoArt</a></li>
-      </ul>
-      <!--CAMBIAR DE LI A LABEL MAS TARDE!-->
-
-      <ul class="menu" id="menu">
-        <li class="navMenu" id="homeTab"><a href="#">Home</a></li>
-        <li class="navMenu" id="peopleTab"><a href="#">People</a></li>
-        <li class="navMenu" id="modelTab"><a href="#">Modeling</a></li>
-        <li class="navMenu" id="urbanTab"><a href="#">Urban</a></li>
-        <li class="navMenu" id="eventTab"><a href="#">Events</a></li>
-        <li class="navMenu" id="contactTab"><a href="#">Contact us</a></li>
-        <li class="navMenu" id="blogTab"><a href="#">Blog</a></li>
-      </ul>
-    
-  </div>
-</div>
-
-<hr class="topHr" id="topHr">
+<%= render 'layouts/header' %>
 
 <div class="jumbotron" id="jumbotron"> <!-- jumbotron ID used for the moving the social media contact boxes"-->
 
 
   <!--this container is needed to set up the dark grey transparent bg when thumbnail photos are clicked and shown to size-->
+<%= render 'layouts/Tabs/homeTab' %>
 
-
-  <!--REPONER ACTIVE TAB AQUI-->
-  <div class="content-Tabs active-Tab" id="homeContent">
-
-    <h1>Lorem Ipsum</h1>
-    
-    <img class="img-Gato" src="http://www.online-image-editor.com//styles/2014/images/example_image.png">
-    <div class="homeBody">
-      <p class="loremHome">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu nulla vitae metus rhoncus ultricies quis nec felis. Duis -lectus turpis, auctor sed enim ac, blandit mollis justo. Nam quis nisi dapibus, vulputate lacus eleifend, maximus magna.
-        Quisque et ullamcorper magna. In bibendum, elit at bibendum rutrum, erat nunc pulvinar nisl, vel elementum metus purus ac purus. Mauris gravida porta nibh non consectetur. Suspendisse ullamcorper enim eros, at fringilla nibh iaculis a. Nunc accumsan
-        ex magna, id eleifend purus volutpat vel. Integer quam orci, tempus sit amet massa at, dictum pulvinar est. Nam volutpat massa eu auctor rutrum. Nunc vehicula et felis sit amet egestas. Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Suspendisse tristique eu sem sit amet rutrum. Sed id eleifend augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus sit amet velit interdum tellus pellentesque efficitur.
-        Fusce vitae magna massa. Proin tincidunt a eros et tempus. Vestibulum at elit ac risus volutpat pretium. Suspendisse ornare tincidunt augue in volutpat. Nullam elementum nisl lacus. Sed malesuada orci a nunc pulvinar laoreete
-      </p>
-
-     
-    </div>
-    
-    
-    <div class="smallThumbnails">
-      <div class="smallThumbnailsContainer">
-        
-        <div class="smallThumbnailImgs" id="thumbnailPhoto1"><span>Expand</span></div>
-        <div class="smallThumbnailImgs" id="thumbnailPhoto2"><span>Expand</span><!--<img src="https://static.wixstatic.com/media/be0972_8c14305aff204a55a768e4b825c7b708.jpg/v1/fill/w_1172,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_8c14305aff204a55a768e4b825c7b708.jpg">--></div>
-        <div class="smallThumbnailImgs" id="thumbnailPhoto3"><span>Expand</span><!--<img src="https://static.wixstatic.com/media/be0972_4fff92aa64c24927bd083fbe071fab06.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_4fff92aa64c24927bd083fbe071fab06.jpg">--></div> 
-        <div class="smallThumbnailImgs" id="thumbnailPhoto4"><span>Expand</span><!--<img src="https://static.wixstatic.com/media/be0972_e154b9251a7949a5858380193324fcb2.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_e154b9251a7949a5858380193324fcb2.jpg">--></div> 
-      </div>
-    </div>
-   
-    
-  <div class="bigThumbnails" id="bigThumbnails">
-     <div class="bigThumbnailsContainer">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto1" src="https://static.wixstatic.com/media/be0972_1c0ae4a1f489479095b0254386cfb30a.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_1c0ae4a1f489479095b0254386cfb30a.jpg">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto2" src="https://static.wixstatic.com/media/be0972_8c14305aff204a55a768e4b825c7b708.jpg/v1/fill/w_1172,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_8c14305aff204a55a768e4b825c7b708.jpg">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto3" src="https://static.wixstatic.com/media/be0972_4fff92aa64c24927bd083fbe071fab06.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_4fff92aa64c24927bd083fbe071fab06.jpg">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto4" src="https://static.wixstatic.com/media/be0972_e154b9251a7949a5858380193324fcb2.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_e154b9251a7949a5858380193324fcb2.jpg">
-    </div> 
-  </div>
-    
-  </div>
 
 
   <div class="content-Tabs" id="peopleContent">
@@ -354,26 +259,4 @@
   </div>
 </div>
 
-</div> <!--wrapper closing tag> <-->
-<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-<script src="script-main.js" type="text/javascript"></script>
-<!-- twitter script -->
-<script>window.twttr = (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0],
-    t = window.twttr || {};
-  if (d.getElementById(id)) return t;
-  js = d.createElement(s);
-  js.id = id;
-  js.src = "https://platform.twitter.com/widgets.js";
-  fjs.parentNode.insertBefore(js, fjs);
- 
-  t._e = [];
-  t.ready = function(f) {
-    t._e.push(f);
-  };
- 
-  return t;
-}(document, "script", "twitter-wjs"));</script>
-
-</body>
-</html>
+</div>
