implement all partials

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,262 +1,25 @@
 <div class="sitewrapper" id="sitewrapper">
-    
+
 <%= render 'layouts/header' %>
 
 <div class="jumbotron" id="jumbotron"> <!-- jumbotron ID used for the moving the social media contact boxes"-->
 
 
   <!--this container is needed to set up the dark grey transparent bg when thumbnail photos are clicked and shown to size-->
-<%= render 'layouts/Tabs/homeTab' %>
+<%= render 'layouts/tabs/homeTab' %>
+<%= render 'layouts/tabs/peopleTab' %>
+<%= render 'layouts/tabs/modelsTab' %>
+<%= render 'layouts/tabs/urbanTab' %>
+<%= render 'layouts/tabs/eventsTab' %>
+<%= render 'layouts/tabs/contactTab' %>
+<%= render 'layouts/tabs/blogTab' %>
 
 
-
-  <div class="content-Tabs" id="peopleContent">
-    
-    <div class="peopleSlider">
-
-   <div class="peopleSlide active-slide"><img src="https://static.wixstatic.com/media/be0972_1e6ecc370cc24f1f98be5b48d5cd758f.jpg/v1/fill/w_820,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_1e6ecc370cc24f1f98be5b48d5cd758f.jpg"></div>
-   <div class="peopleSlide"><img src="https://static.wixstatic.com/media/be0972_1c0ae4a1f489479095b0254386cfb30a.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_1c0ae4a1f489479095b0254386cfb30a.jpg"></div>
-   <div class="peopleSlide"><img src="https://static.wixstatic.com/media/be0972_65dc80516bcc4cf6a5b8d0e5dcd2b0ae.jpg/v1/fill/w_911,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_65dc80516bcc4cf6a5b8d0e5dcd2b0ae.jpg"></div>
-   <div class="peopleSlide"><img src="https://static.wixstatic.com/media/be0972_004ab79ded574144b846f65cb831f646.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_004ab79ded574144b846f65cb831f646.jpg"></div>
-   <div class="peopleSlide"><img src="https://static.wixstatic.com/media/be0972_76b5dc61b1c2447d8da20421c6c16a4b.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_76b5dc61b1c2447d8da20421c6c16a4b.jpg"></div>
-   <div class="peopleSlide"><img src="https://static.wixstatic.com/media/be0972_bb3fbda886fc4d9f821a1687b35cad8f.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_bb3fbda886fc4d9f821a1687b35cad8f.jpg"></div>
-   <div class="peopleSlide"><img src="https://static.wixstatic.com/media/be0972_be4f5c5321c14ff9a826daea5b15700b.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_be4f5c5321c14ff9a826daea5b15700b.jpg"></div>
-   <div class="peopleSlide"><img src="https://static.wixstatic.com/media/be0972_c15ec71eb695430e9fc6660c60302226.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_c15ec71eb695430e9fc6660c60302226.jpg"></div>
-   <div class="peopleSlide"><img src="https://static.wixstatic.com/media/be0972_5288efa5258644bebb981d8c6e9da142.jpg/v1/fill/w_1270,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_5288efa5258644bebb981d8c6e9da142.jpg"></div>
-   <div class="peopleSlide"><img src="https://static.wixstatic.com/media/be0972_b6f23b13d36b41b3a379db5bea42b4d7.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_b6f23b13d36b41b3a379db5bea42b4d7.jpg"></div>
-  
-  
-  </div>
-  
-  <div class="slider-nav-prev">
-    <div class="prevArrow" id="leftArrowCircle">
-      <div class="prevArrowHead" id="leftArrowHead"></div>
-    </div>
-  </div>
-    
-    <div class="slider-nav-next">
-      <div class="nextArrow" id="rightArrowCircle">
-        <div class="nextArrowHead" id="rightArrowHead"></div>
-      </div>
-    </div>
-  
-       <div class="slideCounter" id="peopleSlideCounter"> 
-         <span class="sliderValue" id="peopleCounterValue">
-           <input type="text" maxlength="2" class="slidePicker" id="peopleCounterCurrent" value="1"> of 
-           <div class="counterTotal" id="peopleCounterTotal"></div>
-         </span>
-       </div> 
-  
-  </div>
-
-
-  <div class="content-Tabs" id="modelsContent">
-
-    <div class="modelsSlider">
-
-<div class="modelsSlide active-slide"><img src="https://static.wixstatic.com/media/be0972_8c14305aff204a55a768e4b825c7b708.jpg/v1/fill/w_1172,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_8c14305aff204a55a768e4b825c7b708.jpg"></div>
-<div class="modelsSlide"><img src="https://static.wixstatic.com/media/be0972_af6f43268e0f444cafb8a7474cdd0b44.jpg/v1/fill/w_1430,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_af6f43268e0f444cafb8a7474cdd0b44.jpg"></div>
-<div class="modelsSlide"><img src="https://static.wixstatic.com/media/be0972_93704d6e9dd14e1191ae7347273d529a.jpg/v1/fill/w_830,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_93704d6e9dd14e1191ae7347273d529a.jpg"></div>
-<div class="modelsSlide"><img src="https://static.wixstatic.com/media/be0972_86c4d79ec3fd4346bcbf540eb7b92f12.jpg/v1/fill/w_1285,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_86c4d79ec3fd4346bcbf540eb7b92f12.jpg"></div>
-<div class="modelsSlide"><img src="https://static.wixstatic.com/media/be0972_7e08795a7352401d80f945a2cbf33c78.jpg/v1/fill/w_921,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_7e08795a7352401d80f945a2cbf33c78.jpg"></div>
-<div class="modelsSlide"><img src="https://static.wixstatic.com/media/be0972_02b6daae885543b0b6a8443a23ab08eb.jpg/v1/fill/w_1145,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_02b6daae885543b0b6a8443a23ab08eb.jpg"></div>
-<div class="modelsSlide"><img src="https://static.wixstatic.com/media/be0972_8a0f498754594b30a28830a091b6f7a8.jpg/v1/fill/w_1027,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_8a0f498754594b30a28830a091b6f7a8.jpg"></div>
-<div class="modelsSlide"><img src="https://static.wixstatic.com/media/be0972_e69a74fd9bdb4398971159fab8ec8a91.jpg/v1/fill/w_1351,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_e69a74fd9bdb4398971159fab8ec8a91.jpg"></div>
-<div class="modelsSlide"><img src="https://static.wixstatic.com/media/be0972_b2ebe484db4843c9bd5c5da7b0a5bf3a.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_b2ebe484db4843c9bd5c5da7b0a5bf3a.jpg"></div>
-<div class="modelsSlide"><img src="https://static.wixstatic.com/media/be0972_bf88f9f0ee76479b95736cf0d11dbc01.jpg/v1/fill/w_874,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_bf88f9f0ee76479b95736cf0d11dbc01.jpg"></div>
-
-    </div>
-
-    <div class="slider-nav-prev">
-      <div class="prevArrow" id="leftArrowCircle">
-        <div class="prevArrowHead" id="leftArrowHead"></div>
-      </div>
-    </div>
-    
-    <div class="slider-nav-next">
-      <div class="nextArrow" id="rightArrowCircle">
-        <div class="nextArrowHead" id="rightArrowHead"></div>
-      </div>
-  </div>   
-   
-       <div class="slideCounter" id="modelsSlideCounter"> 
-         <span class="sliderValue" id="modelsCounterValue">
-           <input type="text" maxlength="2" class="slidePicker" id="modelsCounterCurrent" value="1"> of 
-           <div class="counterTotal" id="modelsCounterTotal"></div>
-         </span>
-       </div> 
- 
-
-
-  </div>
-  
-  <div class="content-Tabs" id="urbanContent">
-    <div class="urbanSlider">
-      <div class="urbanSlide active-slide"><img src="https://static.wixstatic.com/media/be0972_a7b4c86d574f4f33a0fa1e88a5c92b7b.jpg/v1/fill/w_1502,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_a7b4c86d574f4f33a0fa1e88a5c92b7b.jpg"></div>
-      <div class="urbanSlide"><img src="https://static.wixstatic.com/media/be0972_4fff92aa64c24927bd083fbe071fab06.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_4fff92aa64c24927bd083fbe071fab06.jpg"></div>
-      <div class="urbanSlide"><img src="https://static.wixstatic.com/media/be0972_3e7df30b8fb54402aadbb34626869389.jpg/v1/fill/w_1481,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_3e7df30b8fb54402aadbb34626869389.jpg"></div>
-      <div class="urbanSlide"><img src="https://static.wixstatic.com/media/be0972_0eb699b2edf64e8aab67c3240858717a.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_0eb699b2edf64e8aab67c3240858717a.jpg"></div>
-      <div class="urbanSlide"><img src="https://static.wixstatic.com/media/be0972_27c55a2949ef4ec3af296d22050a057e.jpg/v1/fill/w_1156,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_27c55a2949ef4ec3af296d22050a057e.jpg"></div>
-      <div class="urbanSlide"><img src="https://static.wixstatic.com/media/be0972_66b9bb7249ad43d2af5a5abc605ff513.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_66b9bb7249ad43d2af5a5abc605ff513.jpg"></div>
-      <div class="urbanSlide"><img src="https://static.wixstatic.com/media/be0972_fd8eb1ba19454709b6ca69d099e2bf47.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_fd8eb1ba19454709b6ca69d099e2bf47.jpg"></div>
-      <div class="urbanSlide"><img src="https://static.wixstatic.com/media/be0972_c8c96962955a41119231df7f9aa7c6d1.jpg/v1/fill/w_1214,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_c8c96962955a41119231df7f9aa7c6d1.jpg"></div>
-      <div class="urbanSlide"><img src="https://static.wixstatic.com/media/be0972_93587ab7f89043ebac80f9bf704ddbef.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_93587ab7f89043ebac80f9bf704ddbef.jpg"></div>
-      <div class="urbanSlide"><img src="https://static.wixstatic.com/media/be0972_a784becc62ad4d9a8661cf8e0752329d.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_a784becc62ad4d9a8661cf8e0752329d.jpg"></div>
-      
-    </div>
-    
-  <div class="slider-nav-prev">
-      <div class="prevArrow" id="leftArrowCircle">
-  <div class="prevArrowHead" id="leftArrowHead"></div>
-      </div>
-    </div>
-    
-    <div class="slider-nav-next">
-      <div class="nextArrow" id="rightArrowCircle">
-  <div class="nextArrowHead" id="rightArrowHead"></div>
-      </div>
-  </div>
-  
-       <div class="slideCounter" id="urbanSlideCounter"> 
-         <span class="sliderValue" id="urbanCounterValue">
-           <input type="text" maxlength="2" class="slidePicker" id="urbanCounterCurrent" value="1"> of 
-           <div class="counterTotal" id="urbanCounterTotal"></div>
-         </span>
-       </div>   
-  
-  
-  </div>
-  
-  
-
-
-  <div class="content-Tabs" id="eventsContent">
-
-
-    <div class="eventsSlider">
-
-<div class="eventsSlide active-slide"><img src="https://static.wixstatic.com/media/be0972_e154b9251a7949a5858380193324fcb2.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_e154b9251a7949a5858380193324fcb2.jpg"></div>
-<div class="eventsSlide"><img src="https://static.wixstatic.com/media/be0972_13c185b9eaf54820bf838a8978e6b366.jpg/v1/fill/w_937,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_13c185b9eaf54820bf838a8978e6b366.jpg"></div>
-<div class="eventsSlide"><img src="https://static.wixstatic.com/media/be0972_bd5a6b9b10c94cbda29a2bc8635994f1.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_bd5a6b9b10c94cbda29a2bc8635994f1.jpg"></div>
-<div class="eventsSlide"><img src="https://static.wixstatic.com/media/be0972_2b88f444b04242808c4772b6d5f85144.jpg/v1/fill/w_1224,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_2b88f444b04242808c4772b6d5f85144.jpg"></div>
-<div class="eventsSlide"><img src="https://static.wixstatic.com/media/be0972_85fab133fa924c389da0b9f6503776c5.jpg/v1/fill/w_1340,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_85fab133fa924c389da0b9f6503776c5.jpg"></div>
-<div class="eventsSlide"><img src="https://static.wixstatic.com/media/be0972_4893e3d5e5d54666a804078954bc1867.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_4893e3d5e5d54666a804078954bc1867.jpg"></div>
-<div class="eventsSlide"><img src="https://static.wixstatic.com/media/be0972_983083a2212c4c8fbec4645e587da951.jpg/v1/fill/w_1183,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_983083a2212c4c8fbec4645e587da951.jpg"></div>
-<div class="eventsSlide"><img src="https://static.wixstatic.com/media/be0972_3f1d7bffd3bb4bec8abb0a87ffc7bc02.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_3f1d7bffd3bb4bec8abb0a87ffc7bc02.jpg"></div>
-<div class="eventsSlide"><img src="https://static.wixstatic.com/media/be0972_637d2a15c73d41e9a9354854c8446817.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_637d2a15c73d41e9a9354854c8446817.jpg"></div>
-<div class="eventsSlide"><img src="https://static.wixstatic.com/media/be0972_9536c86a52c6491bac1898c2b2f21177.jpg/v1/fill/w_834,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_9536c86a52c6491bac1898c2b2f21177.jpg"></div>
-
-    </div>
-
-  <div class="slider-nav-prev">
-      <div class="prevArrow" id="leftArrowCircle">
-  <div class="prevArrowHead" id="leftArrowHead"></div>
-      </div>
-    </div>
-    
-    <div class="slider-nav-next">
-      <div class="nextArrow" id="rightArrowCircle">
-  <div class="nextArrowHead" id="rightArrowHead"></div>
-      </div>
-  </div>
-  
-       <div class="slideCounter" id="eventsSlideCounter"> 
-         <span class="sliderValue" id="eventsCounterValue">
-           <input type="text" maxlength="2" class="slidePicker" id="eventsCounterCurrent" value="1"> of 
-           <div class="counterTotal" id="eventsCounterTotal"></div>
-         </span>
-       </div>   
-  
-  
-  
-  </div>
-
-
-
-<div class="content-Tabs" id="contactContent">
- <div class="aboutButton" id="aboutButton">About me</div>
-    <div class="contactText" id="contactText">
-
-        <div class="leoPhoto"><img id="leoPic" src="https://static.wixstatic.com/media/be0972_3a91d40d363f4931a645b694c4f466c2.jpg/v1/fill/w_261,h_357,al_c,q_80,usm_0.66_1.00_0.01/be0972_3a91d40d363f4931a645b694c4f466c2.jpg"></div>
-      <div class="textBlock"><h1 class="photographerTitle">The photographer</h1>
-      <p id="contactPar">Born in Santiago, Chile, but raised in the city of Hamilton in the state of New Jersey, United States. Working full time as an accountant, but my real love lies with photography. I speak a fluent level of Spanish and a Native level of English so
-        I am very confortable holding conversations in either language. Please don't hesitate to get in touch with me in case you run into any inquiries regarding my servicesr. My biggest aspiration is the complete satisfaction of my clients.
-       </p>
-       </div>
-      </div>
-  
- 
-    <div class="contactFormContainer" id="contactForm">
-      
-   <div class="contactButton" id="contactButton"><span class="contactButtonText">Contact Me</span></div>
-   
-   
-    <form class="contactForm" id="emailForm">    
-
- <div class="contactFormText top">Send me an email</div>
-    <input type="text" name="clientName"><br>
-   <input type="email" name="clientEmail"><br> <!--la otra opcion es usar regex - 28/06/2016 al parecer usar regex es una lata http://stackoverflow.com/questions/46155/validate-email-address-in-javascript. Lo dejare asi y validare server side-->
- <input type="text" name="clientSubject"><br>
- <textarea name="clientMessage"></textarea><br>
-  <input type="submit" name="submit" value="Submit">
-<div class="contactFormText bottom">Or, message me through:<br>
-
-<div class="contactImages"><img class="fbIcon" id="fbMessageButton" src="http://casamiasrestaurant.com/communities/7/000/001/042/387//images/3401337_30x30.jpg">
-<div class="socialMessageBox" id="fbMessageBox"><div class="closeButton" id="fbMessageBoxClose">x</div><div class="fb-page" id="fb-iframe"
-         data-href="https://www.facebook.com/LPAtestpage/" 
-         data-tabs="messages" 
-         data-width="400" 
-         data-height="300" 
-         data-small-header="true">
-      <div class="fb-xfbml-parse-ignore">
-        <blockquote></blockquote>
-      </div>
-    </div>
-    </div><a href="https://twitter.com/intent/tweet?screen_name=e0plusdev_test"><img class="twitterIcon-message" src="https://g.twimg.com/dev/documentation/image/Twitter_logo_blue_32.png"></a>
-    </div>
-    </div>
-     </form>   
-  <!-- I don't really like that the fb message box and the twitter msg box are different, but twitter doesn't allow embedding the web intents target page, maybe I can iframe it if I remove the script?   -->
-       
-  </div> 
-  
-  
-  </div>
-
-
-
-
-  <div class="content-Tabs" id="blogContents">
-    <p>This is my blog. There are many like it but this one is mine</p>
-
-  </div>
 </div>
 
 
+<%= render 'layouts/bottomBar' %>
 
 
-<hr class="bottomHr" id="bottomHr">
-
-<div class="bottomBackground" id="bottomBackground">
-
-  <div class="bottomBar" id="bottomBar">
-
-    <div class="socialMedia">
-
-      <a href="https://www.facebook.com/LeonardoAntonioPhotography" target="_blank"><img class="fbIcon" src="http://casamiasrestaurant.com/communities/7/000/001/042/387//images/3401337_30x30.jpg"></a>
-
-      <a href="http://www.instagram.com/thisisaplaceholder" target="_blank"><img class="instagramIcon" src="http://mumbaiglobal.in/award/wp-content/uploads/2016/07/instagram-logo.png"></a>
-
-      <a href="http://www.twitter.com/thisisaplaceholder" target="_blank"><img class="twitterIcon" src="https://g.twimg.com/dev/documentation/image/Twitter_logo_blue_32.png"></a>
-  
-      <a href="http://www.eugenioLopez.cl" target ="_blank"><img class="eLlogo" src="https://s-media-cache-ak0.pinimg.com/avatars/socialbeaker_1380688420_30.jpg"></a>
-    </div>
-    <div class="madeBy">
-      <label class="madeByTxt">Made in Valdivia, Chile in July 2016</label>
-    </div>
-
-
-  </div>
-</div>
 
 </div>
