--- a/app/views/layouts/tabs/_homeTab.html.erb
+++ b/app/views/layouts/tabs/_homeTab.html.erb
@@ -1,6 +1,3 @@
-<%= provide(:title, 'Home') %>
-
-
   <div class="content-Tabs active-Tab" id="homeContent">
 
     <h1>Lorem Ipsum</h1>
@@ -19,9 +16,9 @@
       <div class="smallThumbnailsContainer">
         
         <div class="smallThumbnailImgs" id="thumbnailPhoto1"><span>Expand</span></div>
-        <div class="smallThumbnailImgs" id="thumbnailPhoto2"><span>Expand</span><!--<img src="https://static.wixstatic.com/media/be0972_8c14305aff204a55a768e4b825c7b708.jpg/v1/fill/w_1172,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_8c14305aff204a55a768e4b825c7b708.jpg">--></div>
-        <div class="smallThumbnailImgs" id="thumbnailPhoto3"><span>Expand</span><!--<img src="https://static.wixstatic.com/media/be0972_4fff92aa64c24927bd083fbe071fab06.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_4fff92aa64c24927bd083fbe071fab06.jpg">--></div> 
-        <div class="smallThumbnailImgs" id="thumbnailPhoto4"><span>Expand</span><!--<img src="https://static.wixstatic.com/media/be0972_e154b9251a7949a5858380193324fcb2.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_e154b9251a7949a5858380193324fcb2.jpg">--></div> 
+        <div class="smallThumbnailImgs" id="thumbnailPhoto2"><span>Expand</span></div>
+        <div class="smallThumbnailImgs" id="thumbnailPhoto3"><span>Expand</span></div> 
+        <div class="smallThumbnailImgs" id="thumbnailPhoto4"><span>Expand</span></div> 
       </div>
     </div>
     
