Implements AJAX, JS needs adjs

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,13 +5,13 @@
         <li id="leoName"><a href="#">Leonardo Antonio PhotoArt</a></li>
       </ul>
       <ul class="menu" id="menu">
-        <li class="navMenu" id="homeTab"><a href="#">Home</a></li>
-        <li class="navMenu" id="peopleTab"><a href="#">People</a></li>
-        <li class="navMenu" id="modelTab"><a href="#">Modeling</a></li>
-        <li class="navMenu" id="urbanTab"><a href="#">Urban</a></li>
-        <li class="navMenu" id="eventTab"><a href="#">Events</a></li>
-        <li class="navMenu" id="contactTab"><a href="#">Contact us</a></li>
-        <li class="navMenu" id="blogTab"><a href="#">Blog</a></li>
+        <li class="navMenu" id="homeTab"><span id="homeSpan">Home</span></li>
+        <li class="navMenu" id="peopleTab"><span id="peopleSpan">People</span></li>
+        <li class="navMenu" id="modelTab"><span id="modelSpan">People</span></li>
+        <li class="navMenu" id="urbanTab"><span id="urbanSpan">Urban</span></li>
+        <li class="navMenu" id="eventTab"><span id="eventSpan">Events</span></li>
+        <li class="navMenu" id="contactTab"><span id="contactSpan">Contact Us</span></li>
+        <li class="navMenu" id="blogTab"><span id="blogSpan">Blog</span></li>
       </ul>
     
   </div>
