--- a/app/views/layouts/tabs/_blogTab.html.erb
+++ b/app/views/layouts/tabs/_blogTab.html.erb
@@ -1,4 +1,4 @@
   <div class="content-Tabs" id="blogContents">
-    <p>This is my blog. There are many like it but this one is mine</p>
+    <p id="blog-par">This is my blog. There are many like it but this one is mine</p>
 
   </div>
