--- a/app/views/layouts/tabs/_peopleTab.html.erb
+++ b/app/views/layouts/tabs/_peopleTab.html.erb
@@ -1,7 +1,7 @@
 
 
  
-<div class="content-Tabs" id="peopleContent">
+<div class="content-Tabs active-Tab" id="peopleContent">
     
     <div class="peopleSlider">
 
