--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -6,13 +6,8 @@
 
 
   <!--this container is needed to set up the dark grey transparent bg when thumbnail photos are clicked and shown to size-->
-<%= render 'layouts/tabs/homeTab' %>
-<%= render 'layouts/tabs/peopleTab' %>
-<%= render 'layouts/tabs/modelsTab' %>
-<%= render 'layouts/tabs/urbanTab' %>
-<%= render 'layouts/tabs/eventsTab' %>
-<%= render 'layouts/tabs/contactTab' %>
-<%= render 'layouts/tabs/blogTab' %>
+<%= render "layouts/jumbotron" %>
+
 
 
 </div>
