--- a/app/views/static/admin.html.erb
+++ b/app/views/static/admin.html.erb
@@ -1,2 +1,2 @@
 <h1>Static#admin</h1>
-<p>This will eventually be an admin panel, just you wait</p>
+<p id="jumbotron">This will eventually be an admin panel, just you wait</p>
