--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,9 +7,9 @@
       <ul class="menu" id="menu">
         <li class="navMenu" id="homeTab"><span id="homeSpan">Home</span></li>
         <li class="navMenu" id="peopleTab"><span id="peopleSpan">People</span></li>
-        <li class="navMenu" id="modelTab"><span id="modelSpan">People</span></li>
+        <li class="navMenu" id="modelsTab"><span id="modelSpan">Models</span></li>
         <li class="navMenu" id="urbanTab"><span id="urbanSpan">Urban</span></li>
-        <li class="navMenu" id="eventTab"><span id="eventSpan">Events</span></li>
+        <li class="navMenu" id="eventsTab"><span id="eventSpan">Events</span></li>
         <li class="navMenu" id="contactTab"><span id="contactSpan">Contact Us</span></li>
         <li class="navMenu" id="blogTab"><span id="blogSpan">Blog</span></li>
       </ul>
