completes AJAX tab correct behavior

--- a/app/views/layouts/tabs/_homeTab.html.erb
+++ b/app/views/layouts/tabs/_homeTab.html.erb
@@ -1,4 +1,4 @@
-  <div class="content-Tabs active-Tab" id="homeContent">
+  <div class="content-Tabs" id="homeContent">
 
     <h1>Lorem Ipsum</h1>
     
