--- a/app/views/layouts/tabs/_homeTab.html.erb
+++ b/app/views/layouts/tabs/_homeTab.html.erb
@@ -1,6 +1,6 @@
   <div class="content-Tabs" id="homeContent">
 
-    <h1>Lorem Ipsum</h1>
+    <h1 class="homeTabTitle">Lorem Ipsum</h1>
     
     <img class="img-Gato" src="/assets/home/gato.png">
     <div class="homeBody">
