--- a/app/assets/stylesheets/style-main.css
+++ b/app/assets/stylesheets/style-main.css
@@ -325,7 +325,7 @@ will-change: opacity;
   
 }
 
-#homeContent h1 {
+.homeTabTitle {
 font-family: 'Stalemate', cursive;
 font-style: italic;
 font-size: 3.5em;
@@ -334,7 +334,6 @@ display: inline;
 
   
 }
-
 
 .loremHome {
   text-align:left;
@@ -371,18 +370,6 @@ display: inline;
   height: 100%;
 
 }
-/*
-
-.smallThumbnails img {
-  min-width: 100%;
-  min-height: 100%;
-  height: 100%;
-  width: 100%;
-  max-height: 101px;
-
-
-}*/
-
 
 .smallThumbnailImgs {
 display: flex;
@@ -397,11 +384,8 @@ font-size: 0px;
 }
 
 .smallThumbnailImgs:hover {
-
  border: 3px double white;
  border-radius: 3px;
-
-
 }
 
 .smallThumbnailImgs span {
@@ -412,8 +396,6 @@ display: flex;
 justify-content: center;
 margin: auto;
 pointer-events: none;
-
-
 }
 
 
@@ -845,7 +827,7 @@ display: inline-block;
 font-family: 'Stalemate', cursive;
 font-weight: normal;
 font-style: italic;
-font-size: 2.6em;
+font-size: 3.5em;
   
 }
 
@@ -1334,7 +1316,7 @@ overflow: scroll;
 
 }
 
-#homeContent h1 {
+.homeTabTitle {
 font-size: 2em;  
 }
 
@@ -1486,7 +1468,6 @@ display: inline-block;
 
 }
 
-
 .contactText {
 max-width: 100vw;
 width: 100%;
@@ -1504,7 +1485,7 @@ text-align: justify;
 width: auto;
 margin-left: auto;
 margin-right: auto;
-font-size: 1.625em;
+font-size: 2em;
 }
 
 #contactPar {
