--- a/app/views/layouts/tabs/_contactTab.html.erb
+++ b/app/views/layouts/tabs/_contactTab.html.erb
@@ -1,3 +1,22 @@
+  <!--this is the facebook script-->
+  <script>window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1015943141834553',
+      xfbml      : true,
+      version    : 'v2.6'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+  </script>
+
+
 <div class="content-Tabs" id="contactContent">
  <div class="aboutButton" id="aboutButton">About me</div>
     <div class="contactText" id="contactText">
