fixes updateState for slide tabs

--- a/app/views/layouts/tabs/_peopleTab.html.erb
+++ b/app/views/layouts/tabs/_peopleTab.html.erb
@@ -2,7 +2,9 @@
 
  
 <div class="content-Tabs" id="peopleContent">
-    
+    <%= content_tag :div, class: "trash-1" do -%>
+
+<% end -%>
     <div class="peopleSlider">
 
 <% @image_dir = 'peopleSlides' 
