--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,20 +1,7 @@
 <div class="sitewrapper" id="sitewrapper">
-
 <%= render 'layouts/header' %>
-
-<div class="jumbotron" id="jumbotron"> <!-- jumbotron ID used for the moving the social media contact boxes"-->
-
-
-  <!--this container is needed to set up the dark grey transparent bg when thumbnail photos are clicked and shown to size-->
+<div class="jumbotron" id="jumbotron">
 <%= render "layouts/jumbotron" %>
-
-
-
 </div>
-
-
 <%= render 'layouts/bottomBar' %>
-
-
-
 </div>
