--- a/app/views/layouts/tabs/_contactTab.html.erb
+++ b/app/views/layouts/tabs/_contactTab.html.erb
@@ -5,7 +5,7 @@
  <div class="aboutButton" id="aboutButton"><span class="contactButtonText">About Me</span></div>
     <div class="contactText" id="contactText">
 
-        <div class="leoPhoto"><img id="leoPic" src="https://static.wixstatic.com/media/be0972_3a91d40d363f4931a645b694c4f466c2.jpg/v1/fill/w_261,h_357,al_c,q_80,usm_0.66_1.00_0.01/be0972_3a91d40d363f4931a645b694c4f466c2.jpg"></div>
+        <div class="leoPhoto"><img id="leoPic" src="/assets/contact/leoPhoto.jpg"></div>
       <div class="textBlock"><h1 class="photographerTitle">The photographer</h1>
       <p id="contactPar">Born in Santiago, Chile, but raised in the city of Hamilton in the state of New Jersey, United States. Working full time as an accountant, but my real love lies with photography. I speak a fluent level of Spanish and a Native level of English so
         I am very confortable holding conversations in either language. Please don't hesitate to get in touch with me in case you run into any inquiries regarding my servicesr. My biggest aspiration is the complete satisfaction of my clients.
@@ -25,16 +25,26 @@
  
  
 
-
+<!--
 <input type="text" name="clientName"><br>
-<input type="email" name="clientEmail"><br> <input type="text" name="clientSubject"><br>
+<input type="email" name="clientEmail"><br>
+<input type="text" name="clientSubject"><br>
 <textarea name="clientMessage"></textarea><br>
  
  
 <input type="submit" name="submit" value="Submit">
 
+-->
 
-  
+<%= form_for(:client_contact) do |f| %>
+
+<%=f.text_field :client_name, name: 'clientName' %>
+<%=f.email_field :client_email, name: 'clientEmail' %>
+<%=f.text_field :client_subject, name: 'clientSubject' %>
+<%=f.text_area :client_message, name: 'clientMessage' %>
+
+<%= f.submit yield(:button_text), name: 'submit' %>
+    <% end %>
 
 <!------------------------------------------------------------------------>  
   
@@ -56,6 +66,8 @@
     </div><a href="https://twitter.com/intent/tweet?screen_name=e0plusdev_test"><img class="twitterIcon-message" src="https://g.twimg.com/dev/documentation/image/Twitter_logo_blue_32.png"></a>
     </div>
     </div>
+    
+
      </form>   
   <!-- I don't really like that the fb message box and the twitter msg box are different, but twitter doesn't allow embedding the web intents target page, maybe I can iframe it if I remove the script?   -->
        
