saves before locals experiment

--- a/app/views/site_mailer/new_contact_email.html.erb
+++ b/app/views/site_mailer/new_contact_email.html.erb
@@ -15,7 +15,8 @@
 <h1>Website</h1>
 
 <p>
-  <%= @greeting %>, You have received a message with the following content:<br>
+  <%= @greeting %>,<br>
+  You have received a message with the following content:<br>
   From: <%= @name %><br>
   Client email: <%= @email %><br>
   Subject: <%= @subject %><br>
