--- a/app/views/layouts/tabs/_contactForm.html.erb
+++ b/app/views/layouts/tabs/_contactForm.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :contact_mailer do |f| %>
+<%= form_for :contact_mailer, remote: true do |f| %>
 
 <%=f.text_field :client_name, name: 'clientName' %>
 <%=f.email_field :client_email, name: 'clientEmail' %>
