--- a/app/views/layouts/tabs/_contactTab.html.erb
+++ b/app/views/layouts/tabs/_contactTab.html.erb
@@ -35,9 +35,10 @@
 <input type="submit" name="submit" value="Submit">
 
 -->
+<div id="myFormContainer">
 <%= render 'layouts/tabs/contactForm' %>
 
-
+</div>
 
 <!------------------------------------------------------------------------>  
   
