makes form work as expected

--- a/app/views/layouts/_jumbotron.html.erb
+++ b/app/views/layouts/_jumbotron.html.erb
@@ -1,6 +1,8 @@
 
 
+<% @tab = params[:tab] %>
+<%#debugger %>
 
+<%# debugger %>
 
-
-<%= render "layouts/tabs/#{params[:tab]}" %>
+<%= render "layouts/tabs/#{@tab}" %>
