fixes double GET from JS

--- a/app/views/layouts/tabs/_contactTab.html.erb
+++ b/app/views/layouts/tabs/_contactTab.html.erb
@@ -1,5 +1,7 @@
 <% provide(:button_text, 'Submit') %>
 <%= render '/layouts/tabs/contactFBScript' %>
+<%= render '/layouts/tabs/twitterScript' %>
+
 
 <div class="content-Tabs" id="contactContent">
  <div class="aboutButton" id="aboutButton"><span class="contactButtonText">About Me</span></div>
