--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,3 +1,14 @@
+
+<head>
+  <%= stylesheet_link_tag    'application', media: 'all'%>
+  <%= javascript_include_tag 'application'%> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <link href='https://fonts.googleapis.com/css?family=Stalemate&subset=latin,latin-ext' rel='stylesheet' type='text/css'>	    
+    
+</head>
+
+
+
 <div class="sitewrapper" id="sitewrapper">
 <%= render 'layouts/header' %>
 <div class="jumbotron" id="jumbotron">
