--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,2 +1,19 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h2>Create new User</h2>
+<p>Here you can create new users to contribute</p>
+
+
+<%= form_for(:admin_user) do |f| %>
+
+<%= f.label :name %>
+<%= f.text_field :name %>
+
+<%= f.label :email %>
+<%= f.email_field :email %>
+
+<%= f.label :password %>
+<%= f.password_field :password %>
+
+<%= f.password_field :password_confirmation %>
+
+<%= f.submit "Create new user", class: "submit-button" %>
+<% end %>
