--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -3,3 +3,4 @@
 <%= @user.email %><br>
 <%= "created at: #{@user.created_at}"%><br>
 <%= "updated at #{@user.updated_at}" %><br>
+<%= button_to "Log out", admin_logout_path, method: "delete" %>
