adds basic creation skeleton

--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -2,6 +2,6 @@
     
     <h3><%= post.title %></h3> 
     <div class="post-content"><%= post.content %></div>
-    <span class="timestamp">Posted <%= time_ago_in_words(post.created_at) %></span>
+    <span class="timestamp">Posted <%= time_ago_in_words(post.created_at) %> ago</span>
     <div class="posts-nav">Prev/Next Buttons go here</div>
 </div>    
