links user/show to post/new

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -11,13 +11,13 @@
 
 <% if @user.posts.any? %>
 <h3>Your posts</h3>
-<ol class="posts">
-    <% @posts.each do |post| %>
-    <span><%= render post %></span>
-    <% end %>
-</ol>
-<% end %>
 
+    <% @posts.each do |post| %>
+       <ol class="posts"><%= link_to post.title,  admin_post_path(post) %></ol>
+    <% end %>
+
+<% end %>
+<%= button_to "Create new post", new_admin_post_path, method: "get" %><br>
 
 <% if logged_in? && current_user.admin %>
 <%= button_to "Create new user", new_admin_user_path, method: "get" %><br>
