--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -1,6 +1,10 @@
-<div class="post" id="post-<%= post.id %>">
+<% if !@post 
+    @post = Post.fourth
+    end %>
+<div class="post" id="post-<%= @post.id %>">
     
-    <h3><%= post.title %></h3> 
-    <div class="post-content"><%= post.content %></div>
-    <span class="timestamp">Posted <%= time_ago_in_words(post.created_at) %> ago</span>
+    <div class="post-title"><%= sanitize @post.title, tags: %w(strong em a div p img) %></div>
+    <div class="post-content"><%= sanitize @post.content, tags: %w(strong em div p img), attributes: %w(style src) %></div>
+    <span class="timestamp">Posted <%= time_ago_in_words(@post.created_at) %> ago</span>
+    
 </div>    
