--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -1,11 +1,11 @@
 <% if !@post 
-    @post = Post.fourth
+    @post = Post.last
     end %>
 <div class="post" id="post-<%= @post.id %>">
     
     <div class="post-title"><%= sanitize @post.title, tags: %w(strong em a div p img) %></div>
     <span class="timestamp">Posted <%= time_ago_in_words(@post.created_at) %> ago</span>
-    <div class="post-content"><%= sanitize @post.content, tags: %w(strong em div p img), attributes: %w(style src) %></div>
+    <div class="post-content"><%= sanitize @post.content, tags: %w(strong em div p img span), attributes: %w(style src Font-family font-weight) %></div>
 
     
 </div>    
