--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -23,11 +23,11 @@
 <%= form_for(:post, url: admin_posts_url) do |f| %>
     <%= f.label  "Post title" %><br>
     <%= f.text_field :title, :id => 'post-title', class: "post-title" %><br>
-        <script>
+        <!--<script>
                     CKEDITOR.replace('post-title', {height: '40', width: '100%', toolbar: [
     [ 'Source', '-', 'Bold', 'Italic', 'Underline', 'Font', 'FontSize', 'Styles', 'Format', ]
 ], language: 'en'});            //editor.resize( '50px', '50px', true );
-        </script>
+        </script>-->
     <%= f.label "Post content" %><br>
     <%= f.text_area :content, :id =>"post-content", class: "post-editor" %>
             <script> //replaces the default text area with a CKEDITOR text area
