--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,2 +1,2 @@
 <%= sanitize @post.title, tags: %w(strong em a div p img) %>
-<%= sanitize @post.content, tags: %w(strong em div p img), attributes: %w(style src) %>
+<%= sanitize @post.content, tags: %w(strong em div p img span), attributes: %w(style src Font-family font-weight) %>
